--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     </div>
 
-    <img class="ship" id="ship" src="img/ship_on.png">
+    <img class="ship" id="ship" src="img/ship_off.png">
     <div class="tags">
         <div class="tag home">
         </div>
