--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 </div>
             </div>
             <div class="parallax__layer parallax__layer--base">
-                <img class="mercury" src="img/mercury.png" id="mercury">
+                <img class="jupiter" src="img/mercury.png" id="mercury">
             </div>
 
         </div>
