--- a/index.html
+++ b/index.html
@@ -268,6 +268,10 @@
     </div>
     <script>
         document.getElementById("parallax").scrollTo(0, document.getElementById("parallax").scrollHeight);
+        if (navigator.userAgent.toLowerCase().match(/mobile/i)) {
+            alert("Website not mobile ready, Please view on desktop");
+            window.location.replace("github.com/StarPlatin4m");
+        }
     </script>
 </body>
 
