--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
 
             <div class="parallax__layer parallax__layer--text">
                 <div class="intro left">
-                    <h1 class="heading">Hi, i'm Kival</h1>
+                    <h1 class="heading">I want to</h1>
                     <p class="text">
-                        And i want to fucking kill myself
+                        to fucking kill myself
                     </p>
                 </div>
             </div>
@@ -215,7 +215,7 @@
                 <div class="intro">
                     <h1 class="heading">Hi, i'm Kival</h1>
                     <p class="text">
-                        And i want to fucking kill myself
+                        And i really want to fucking kill myself
                     </p>
                 </div>
             </div>
@@ -270,6 +270,18 @@
         document.getElementById("parallax").scrollTo(0, document.getElementById("parallax").scrollHeight);
         if (navigator.userAgent.toLowerCase().match(/mobile/i)) {
             alert("Website not mobile ready, Please view on desktop");
+        }
+        var elem = document.documentElement;
+
+        /* View in fullscreen */
+        function openFullscreen() {
+            if (elem.requestFullscreen) {
+                elem.requestFullscreen();
+            } else if (elem.webkitRequestFullscreen) { /* Safari */
+                elem.webkitRequestFullscreen();
+            } else if (elem.msRequestFullscreen) { /* IE11 */
+                elem.msRequestFullscreen();
+            }
         }
     </script>
 </body>
