--- a/index.html
+++ b/index.html
@@ -359,7 +359,9 @@
         </h1>
         <h2 class="fg-light-1">Check it out here >></h1>
           <div class="text-center">
-        <button class="btn btn-outline-primary">Let's Go</button>
+            <a href="/interactive.html"">
+        <button class="btn btn-outline-primary" >Let's Go</button>
+      </a>
       </div>
       </div>
     </div>
