--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <a class="nav-link" href="#git">Contact</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/interactive.html">Interactive</a>
+                    <a class="nav-link" href="https://starplatin4m.github.io/interactive-website/">Interactive</a>
                   </li>
                 </ul>
               </div>
