--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
         </h1>
         <h2 class="fg-light-1">Check it out here >></h1>
           <div class="text-center">
-            <a href="/interactive.html"">
+            <a href="https://starplatin4m.github.io/interactive-website/">
         <button class="btn btn-outline-primary" >Let's Go</button>
       </a>
       </div>
