--- a/index.html
+++ b/index.html
@@ -357,11 +357,11 @@
         <h1 class="fg-light-1">
           Theres also a web game version of this website
         </h1>
-        <h1 class="fg-light-1">Check it out here >></h1>
+        <h1 class="fg-light-1">Check it out here </h1>
           <div class="text-center">
             <a href="https://starplatin4m.github.io/interactive-website/">
-        <button class="btn btn-outline-primary" >Let's Go</button>
-      </a>
+              <button class="btn btn-outline-primary" >Let's Go</button>
+            </a>
       </div>
 
     </div>
