--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       </div>
     </div>
     <!-- /About -->
-    <div class="of-h">
+    <div class="of-h divider">
       <svg
         class="div1"
         viewBox="0 0 1440 120"
@@ -291,7 +291,7 @@
     </div>
 
     <!-- /Skills -->
-    <div class="bg-dark-1 of-h">
+    <div class="bg-dark-1 of-h divider">
       <svg
         class="div3"
         viewBox="0 0 1440 47"
@@ -344,7 +344,7 @@
         </div>
       </div>
     </div>
-    <div class=" of-h">
+    <div class=" of-h divider">
       <svg viewBox="0 0 1920 250" xmlns="http://www.w3.org/2000/svg" class="div1">
       <path
         d="M0 195.553s208.547-75.581 701.325-20.768c376.707 41.908 520.834-67.962 722.545-67.962 222.926 0 311.553 83.523 496.129 86.394V250H0v-54.447z"
